# SummerTraining2024-HW

./: README.md
HW12-HTML-CSS/: index.html
HW12-HTML-CSS/css/: styles.css
HW12-HTML-CSS/htmls/: about.html  article1.html  article2.html  article3.html  article4.html  article5.html
HW18-student-grade-management/: package.json  readme.md  server.js
HW18-student-grade-management/public/: index.html
HW18-student-grade-management/public/css/: style.css
HW18-student-grade-management/public/js/: inputAndAnalyzeStudentScores.js
HW5-Cpp_anvanced_hw/: Cpp_anvanced_hw.md
HW5-Cpp_anvanced_hw/Homework/Others/: forLoopTest.cpp  leftValueAndRightValue.cpp
HW5-Cpp_anvanced_hw/Homework/Part1/: Fibo.cpp  main.cpp
HW5-Cpp_anvanced_hw/Homework/Part2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
HW5-Cpp_anvanced_hw/Homework/Part2/ThirdLib/include/: ThirdLib.hpp
HW5-Cpp_anvanced_hw/Homework/Part2/include/: Fibo.h
HW5-Cpp_anvanced_hw/Homework/Part2/src/: Fibo.cpp  main.cpp
HW5-Cpp_anvanced_hw/Homework/Part3/: CMakeLists.txt  README.txt  SingleFile.cpp  cmake_run.bat
HW5-Cpp_anvanced_hw/Homework/Part3/include/: io.h
HW5-Cpp_anvanced_hw/Homework/Part3/src/: io.cpp
HW5-Cpp_anvanced_hw/Homework/Part4/: OOP.cpp  OOP_modified.cpp
HW5-Cpp_anvanced_hw/Homework/Part5/: Lambda.cpp
HW6-protoc/client/: client.py  compile_proto_file.bat
HW6-protoc/server/Calculator/: Calculator.sln
HW6-protoc/server/Calculator/Calculator/: Program.cs
HW6-protoc/server/Calculator/Calculator/Properties/: launchSettings.json
(+2 files in other folders)
